BTG version 0.9.8
-----------------
The following bugs were fixed:

013644 Ports opened by UPnP when it is disabled.
013643 Daemon starts without rewriting unexistent pid.
013618 btgncli, show sessions when invoked without arguments.
013557 UPnP, automatic internal IP detection.
013555 UPnP, added separate config-file parameter for internal-ip.
013538 Issues with native FreeBSD dialog.
013501 Implement better torrent loading.
013490 Provide source-packages in deb-src.
013460 Showing file pieces for torrents missing from wwwui.
013459 File selection missing from wwwui.
013454 Writing PID-file (daemon).
013435 Open all necessary files before switching EUID (daemon).
013450 Logging optimization - static conditions.
013436 btgui, resizable headers.
013434 Log messsages loss when logging not initialized.
013433 Configuration file search paths.
013412 Additional command: supported options.
013411 BTGWWW, load a torrent from an URL.
013399 Merge Miklos Vajna's GCC 4.3 patch.
013381 URL loading in daemon and non-www clients.
013307 btgui, no error message on incorrect login (also btgcli/ncli).
013198 Unable to load huge torrent files.

BTG version 0.9.7
-----------------
The following bugs were fixed:

013359 Compilation error: numinput.h.
013315 btgui, torrent remains after moving to another session.
013306 btgui, executing operations on multiple torrents.
013272 Add support for libtorrent 0.12.1.
013267 btgcli, incorrect seed limit.
013266 btgui, global limit setting.
013265 btgui, limit settings dialog doesn't correctly display limits.
013248 btgncli, add dialog used for entering numbers.
013216 Session saving, add saving of global limits.
013147 Handle octets set to 255 in Address/addressPort.
013146 XML Pasing error (wwwui).
013142 Restore file priorities after restart.
013136 Change of peer id / useragent (feature req).
013007 Show session settings.
012997 Session saving, fix saving of dht/encryption settings.
012975 Externalization, simple, exorcism.